--- a/product/pom.xml
+++ b/product/pom.xml
@@ -13,6 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>product</name>
 	<description>Product micro service</description>
+
+	<properties>
+		<java.version>23</java.version>
+		<lombok.version>1.18.30</lombok.version>
+
+	</properties>
 	<url/>
 	<licenses>
 		<license/>
@@ -26,9 +32,6 @@
 		<tag/>
 		<url/>
 	</scm>
-	<properties>
-		<java.version>23</java.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -75,6 +78,20 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin> <groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration></plugin>
 		</plugins>
 	</build>
 
