feat(product): add custom mapper, update backing, services and entities

--- a/product/pom.xml
+++ b/product/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>23</java.version>
 		<lombok.version>1.18.30</lombok.version>
-		<dozer.version>7.0.0</dozer.version>
+		<dozer.version>8.5.1</dozer.version>
 
 
 	</properties>
@@ -66,10 +66,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.github.dozermapper</groupId>
-			<artifactId>dozer-core</artifactId>
-			<version>${dozer.version}</version>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version> <!-- Check for latest version -->
 		</dependency>
+
 
 	</dependencies>
 
