--- a/product/pom.xml
+++ b/product/pom.xml
@@ -26,7 +26,10 @@
 		<license/>
 	</licenses>
 	<developers>
-		<developer/>
+		<developer>
+			<name>Mohammed Hassan</name>
+			<email>mohammed_hassan2525@gmail.com</email>
+		</developer>
 	</developers>
 	<scm>
 		<connection/>
@@ -42,6 +45,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
 		<dependency>
